tests/fixtures/syntax/valid/dir_exists_expectation.repor
case "dir exists" {
  $ true
  assert {
    dir "out" exists
  }
}
