tests/fixtures/syntax/invalid/file_subject_string_literal.repor
case "file subject requires a workspace path literal, not a string literal" {
  $ true
  assert {
    file "out.txt" exists
  }
}
